--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,11 @@
     <string name="meeting_time">Heure</string>
     <string name="room_spinner">Spinner to choose a meeting room</string>
     <string name="example">Example</string>
+    <string name="saved">"Réunion enregistrée</string>
     <string name="hide">MASQUER LES PARTICIPANTS</string>
     <string name="show">VOIR LES PARTICIPANTS</string>
+    <string name="fab_disabled">Veuillez choisir une heure de réunion</string>
+    <string name="room_search_txt">Filtrer par salle</string>
+    <string name="time_search_txt">Filtrer par heure</string>
+    <string name="deleted">Réunion supprimée</string>
 </resources>
